--- a/src/components/Portfolio/Home.css
+++ b/src/components/Portfolio/Home.css
@@ -38,15 +38,20 @@
     gap: 20px;
     margin-bottom: 30px; /* Adjusted margin for space efficiency */
     background-color: white;
+    outline: none;
+
 }
 
 .nav-link {
     padding: 10px 20px;
     text-decoration: none;
     color: #007BFF;
+    outline: none;
 }
 .nav-link:active {
     color:red;
+    outline: none;
+
 }
 
 .nav-link:hover {
